# math

./: .cdtbuild  .cproject  .gitignore  .project  .project_initial  CMakeLists.txt
src/: Bessel.c  Bessel.h  CMakeLists.txt  Geometry.c  Geometry.h  Interpolation.c  Interpolation.h  MathConstants.h  Misc.c  Misc.h  RootFinding.c  RootFinding.h  SIE_Math.h  Statistics.c  Statistics.h  Trig.c  Trig.h
